# tfdslib

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/tfdslib/config/: config.py
src/tfdslib/config_api/: __init__.py  config_api.py
src/tfdslib/config_file/: __init__.py  config_file.py
src/tfdslib/s3/: __init__.py  s3.py
src/tfdslib/spark/: spark.py
src/tfdslib/utils/: __init__.py  utils.py
tests/: test_config.py  test_config_api.py  test_config_file.py  test_s3.py  test_spark.py  test_utils.py
