[project]
name = "tfdslib"
version = "0.1.0"
description = "tfds utilities for use in cli, plugins and notebooks"
authors = [
    {name = "tfds@jensbox.se"}
]
license = {text = "gnu general public license v3"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.10.0",
    "boto3 (>=1.38.19,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "tfdslib", from = "src" }
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
ruff = "^0.11.10"

[tool.poetry.extras]
spark = ["pyspark"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true


[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN201"]